--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,105 +1,52 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  background-color: #232323;
+  color: #fff;
 }
 
 .container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: #333;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
 }
 
 h1 {
-  font-size: 36px;
-  text-align: center;
+  color: #e91e63;
 }
 
 .form {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.input-group {
-  display: flex;
-  flex-direction: column;
+  border: 1px solid #fff;
 }
 
 .input-group label {
-  font-size: 18px;
-  margin-bottom: 5px;
+  color: #ccc;
 }
 
-.input-group input[type="text"] {
-  font-size: 18px;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-}
-
+.input-group input[type="text"], 
 .input-group select {
-  font-size: 18px;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  margin-top: 5px;
+  background-color: #444;
+  color: #fff;
 }
 
 .button {
-  font-size: 18px;
-  padding: 5px 10px;
-  border-radius: 5px;
-  border: none;
-  background-color: #007bff;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  background-color: #0d47a1;
 }
 
 .button:hover {
-  background-color: #0062cc;
+  background-color: #1565c0;
 }
 
 .weather-card {
-  margin-top: 20px;
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  background-color: #444;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
 }
 
 .weather-card h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
+  color: #e91e63;
 }
 
 .weather-card p {
-  font-size: 18px;
-  margin: 0;
+  color: #fff;
 }
 
 .weather-card img {
-  margin-top: 10px;
-}
-
-@media (max-width: 600px) {
-  .form {
-    flex-direction: column;
-  }
-  
-  .input-group {
-    margin-bottom: 10px;
-  }
-  
-  .button {
-    margin-top: 10px;
-  }
+  filter: drop-shadow(2px 2px 4px #000);
 }
